# extractx

./: .gitignore  README.md  cli.py  payment.html  pyproject.toml  requirements.txt
core/: __init__.py  exporters.py  extractor.py  scraper.py
