[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extractx"
version = "0.1.0"
description = "AI-Powered Web Data Extractor — extract structured data from any website"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ExtractX", email = "extractx@proton.me"}]
keywords = ["web-scraping", "data-extraction", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0", "anthropic>=0.30"]
all = ["extractx[ai]", "openpyxl>=3.1", "pyyaml>=6.0"]

[project.scripts]
extractx = "cli:main"

[tool.setuptools.packages.find]
include = ["core*"]
